--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "bundle/surround"]
 	path = bundle/surround
 	url = https://github.com/tpope/vim-surround.git
+[submodule "bundle/indentGuides"]
+	path = bundle/indentGuides
+	url = https://github.com/nathanaelkane/vim-indent-guides.git
